# vulkan-tutorial-rust_cpp

./: INSTALL.md  README.md
001_Vulkan_API_Training/: README.md
001_Vulkan_API_Training/001_Vulkan_API_MindMap/: README.md  vulkan.drawio  vulkan_api.dio
assets/: README.md
c_lang/: README.md
cpp_lang/: README.md
cpp_lang/00_hello_vulkan/: .clang-format  .gitignore  README.md
cpp_lang/00_hello_vulkan_LinuxOS/: CMakeLists.txt  README.md
cpp_lang/00_hello_vulkan_macOS/: CMakeLists.txt
cpp_lang/00_hello_vulkan_macOS/src/: main.cpp
cpp_lang/01_dev_environment_setting/: README.md
cpp_lang/01_dev_environment_setting/a01_hello_vulkan/: justfile
cpp_lang/01_dev_environment_setting/a01_hello_vulkan/src/: main.cpp
cpp_lang/01_dev_environment_setting/a02_base_code/src/: main.cpp
cpp_lang/01_dev_environment_setting/a03_glfw_base_code/src/: main.cpp
cpp_lang/01_dev_environment_setting/z99_mainloop_code_intializing_vulkan/: .gitignore
cpp_lang/01_dev_environment_setting/z99_mainloop_code_intializing_vulkan/src/: main.cpp
cpp_lang/02_gltf/: CMakeLists.txt  README.md
cpp_lang/02_gltf/src/: main.cpp
cpp_lang/vulkan001/: .gitignore  CMakeLists.txt  README.md
cpp_lang/vulkan001/assets/: 2Cylinder.gltf  imgui.ini  test.shader.vert
cpp_lang/vulkan001/raptor/application/: application.cpp  application.hpp  game_application.cpp  game_application.hpp  game_camera.cpp  game_camera.hpp  input.cpp  input.hpp  keys.cpp  keys.hpp  window.cpp  window.hpp
cpp_lang/vulkan001/raptor/foundation/: array.hpp  assert.hpp  bit.cpp  bit.hpp  blob.hpp  blob_serialization.cpp  blob_serialization.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  data_structures.cpp  data_structures.hpp  file.cpp  file.hpp  gltf.cpp  gltf.hpp  hash_map.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  memory_utils.hpp  numerics.cpp  numerics.hpp  platform.hpp  process.cpp  process.hpp  relative_data_structures.hpp  resource_manager.cpp  resource_manager.hpp  serialization.hpp  service.hpp  service_manager.cpp  service_manager.hpp  string.cpp  string.hpp  time.cpp  time.hpp  windows_declarations.h
cpp_lang/vulkan001/raptor/graphics/: gpu_device.hpp
cpp_lang/vulkan001/src/: main.cpp
cpp_lang/vulkan_cpp_training/: README.md  justfile
cpp_lang/vulkan_cpp_training/a01_hello_vulkan/src/: main.cpp
cpp_lang/vulkan_cpp_training/a02_hello_vulkan02/src/: main.cpp
cpp_lang/vulkan_cpp_training/a03_glfw_init/: .gitignore
cpp_lang/vulkan_cpp_training/a04_vulkan_guide_init/src/: main.cpp  vk_engine.h
cpp_lang/vulkan_guide_all_chapters/: README.md
cpp_lang/vulkan_guide_all_chapters/chapter-0/: main.cpp  vk_engine.h
rust_lang/: README.md
rust_lang/001_vulkano-rs/: README.md
rust_lang/001_vulkano-rs/001_vulkano-rs_vulkano-book/: README.md
rust_lang/001_vulkano-rs/001_vulkano-rs_vulkano-book/a03-buffer-creation/: Cargo.toml  README.md
rust_lang/001_vulkano-rs/001_vulkano-rs_vulkano-book/a03-buffer-creation/src/: main.rs
rust_lang/001_vulkano-rs/001_vulkano-rs_vulkano-book/a04-compute-pipeline/: Cargo.toml
rust_lang/001_vulkano-rs/001_vulkano-rs_vulkano-book/a04-compute-pipeline/src/: main.rs
rust_lang/001_vulkano-rs/001_vulkano-rs_vulkano-book/a05-images/: Cargo.toml
rust_lang/001_vulkano-rs/001_vulkano-rs_vulkano-book/a05-images/src/: image_clear.rs  main.rs  mandelbrot.rs
rust_lang/001_vulkano-rs/a01_instance_init/: README.md
rust_lang/001_vulkano-rs/a02_base_code/: Cargo.toml
rust_lang/001_vulkano-rs/a02_base_code/src/: main.rs
rust_lang/001_vulkano-rs/a03_base_code_part2/: Cargo.toml
rust_lang/001_vulkano-rs/a03_base_code_part2/src/: main.rs
rust_lang/001_vulkano-rs/a04_init_windows_vulkan/: Cargo.toml
rust_lang/001_vulkano-rs/a04_init_windows_vulkan/src/: '  main.rs
rust_lang/001_vulkano-rs/z01_multi_window/: Cargo.toml
rust_lang/001_vulkano-rs/z01_multi_window/src/: main.rs
rust_lang/002_wgpu/a01_hello_triangle/: Cargo.toml
rust_lang/002_winit_Window_handling_library/: README.md
rust_lang/002_winit_Window_handling_library/a01_winit_new/: Cargo.toml  README.md
rust_lang/002_winit_Window_handling_library/a01_winit_new/src/: app.rs  main.rs
rust_lang/002_winit_Window_handling_library/a02_window_example/: Cargo.toml  README.md
rust_lang/002_winit_Window_handling_library/a02_window_example/src/: main.rs
rust_lang/002_winit_Window_handling_library/a03_run_on_demand/: Cargo.toml
rust_lang/002_winit_Window_handling_library/a03_run_on_demand/src/: main.rs
rust_lang/002_winit_Window_handling_library/a03_run_on_demand/src/util/: fill.rs
rust_lang/002_winit_Window_handling_library/a04_control_flow/: Cargo.toml
rust_lang/002_winit_Window_handling_library/a05_child_window/: Cargo.toml
rust_lang/002_winit_Window_handling_library/a05_child_window/src/: main.rs
rust_lang/003_vulkanalia/: README.md
rust_lang/003_vulkanalia/a01_index_buffer/: Cargo.toml
rust_lang/003_vulkanalia/a01_index_buffer/src/: main.rs
rust_lang/004_wgpu/: README.md
rust_lang/004_wgpu/001_beginner/: README.md
rust_lang/004_wgpu/001_beginner/a01_wgpu_winit/: Cargo.toml  README.md
rust_lang/004_wgpu/001_beginner/a01_wgpu_winit/src/: main.rs
rust_lang/004_wgpu/999_winit_0_30_5_wgpu/: README.md
rust_lang/004_wgpu/999_winit_0_30_5_wgpu/wgpu-0.20-winit-0.30-web-example/: .gitignore  README.md
rust_lang/004_wgpu/999_winit_0_30_5_wgpu/wgpu_automata/: Cargo.toml  README.md
rust_lang/004_wgpu/999_winit_0_30_5_wgpu/wgsl_playground_training/: Cargo.toml
rust_lang/004_wgpu/999_winit_0_30_5_wgpu/wgsl_playground_training/src/: frag.default.wgsl  main.rs
rust_lang/004_wgpu/999_winit_0_30_5_wgpu/wgsl_playground_training/src/app/: appwindows.rs  mod.rs  opts.rs  playgound.rs  userevents.rs
rust_lang/004_wgpu/a02_base_code/: Cargo.toml
rust_lang/004_wgpu/b01_wgpu_test_winit0_30/: Cargo.toml
rust_lang/004_wgpu/b01_wgpu_test_winit0_30/src/: main.rs
rust_lang/01_vulkano-rs/: README.md
rust_lang/01_vulkano-rs/a01_instance_init/: Cargo.toml
rust_lang/01_vulkano-rs/a01_triangle/: Cargo.toml
rust_lang/01_vulkano-rs/a01_triangle/src/: main.rs
zig_lang/: README.md
(+3 files in other folders)
